--- a/app/css/main.css
+++ b/app/css/main.css
@@ -58,7 +58,29 @@ label img {
 }
 #submit:hover {
   font-size: 3rem;
-  padding: 0 30px;
+  padding: 0 20px;
   background: #111112;
   color: #ffffff;
+}
+
+#floater {
+    position: absolute;
+    top: 100px;
+    right: 1px;
+    width: 100px;
+    height: 100px;
+    -webkit-transition: all 2s ease-in-out;
+    transition: all 2s ease-in-out;
+    z-index: 1;
+    border-radius: 3px 0 0 3px;
+    padding: 10px;
+    background-color: #41a6d9;
+    color: white;
+    text-align: center;
+    box-sizing: border-box;
+}
+
+.red {
+    background-color: green;
+    color: white;
 }
