change all bg to cover

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,6 +1,6 @@
 html::after{
   background-image: url("../images/bg.jpg");
-  /*background-size: cover; */
+  background-size: cover; 
   content: "";
   /*background: url(image.jpg);*/
   opacity: 0.3;
