--- a/app/css/result.css
+++ b/app/css/result.css
@@ -1,6 +1,6 @@
   html::before {
     background-image: url("../images/bg.jpg");
-    background-size: contain;
+    background-size: cover;
     /*background-repeat: no-repeat;*/
     content: "";
     top: 0;
