--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,8 +1,7 @@
 html::after{
-  background-image: url("../images/bg.jpg");
+  background-image: url("./images/bg.jpg");
   background-size: cover; 
   content: "";
-  /*background: url(image.jpg);*/
   opacity: 0.3;
   top: 0;
   left: 0;
