--- a/app/css/image.css
+++ b/app/css/image.css
@@ -1,5 +1,5 @@
 html::after{
-  background-image: url("./images/bg.jpg");
+  background-image: url("../images/bg.jpg");
   background-size: cover; 
   content: "";
   opacity: 0.3;
@@ -14,7 +14,6 @@ html::after{
 body {
   font-family: Arial;
   font-size: 12px;
-  /*background: #fdfefc;*/
   overflow: hidden;
 }
 .example-desc {
@@ -23,12 +22,11 @@ body {
 }
 
 #carousel {
-  width: 100vw;
-  height: 600px;
+  width: 100%;
+  height: 50vh;
   position: relative;
   clear: both;
   overflow: hidden;
-  /*background: #fdfefc;*/
 }
 #carousel img {
   visibility: hidden; /* hide images until carousel can handle them */
@@ -112,12 +110,12 @@ h2 {
 }
 
 .thumbnails-container {
-  /*background: #fdfefc;*/
   position: relative;
   margin: 0 auto;
   width: 500px;
   height: 60px;
   text-align: center;
+  margin-top: 2vh;
 }
 
 .thumbnails-img-container {
@@ -168,6 +166,7 @@ h2 {
   justify-content: center;
   margin: auto;
   width: 20vw;
+  margin-top: 6vh;
 }
 #submit {
   font-size: 1.5rem;
