--- a/app/css/image.css
+++ b/app/css/image.css
@@ -128,7 +128,7 @@ h2 {
 .img-container {
   display: none;
   opacity: 0;
-  transition: display 0.5s;
+  /*transition: display 0.5s;*/
 }
 .img-container:hover::before,
 .img-container:hover::after {
@@ -159,7 +159,7 @@ h2 {
   margin-right: 15px;
   padding: 3px;
   opacity: 0.9;
-  transition: display 0.5s;
+  /*transition: display 0.5s;*/
 }
 
 .submit-container {
@@ -174,7 +174,6 @@ h2 {
   font-size: 1.5rem;
   text-decoration: none;
   padding: 5px 20px;
-  /*background: #fdfefc;*/
   color: #e5e6e6;
   border-top: solid 1.5px #e5e6e6;
   border-bottom: solid 1.5px #e5e6e6;
