--- a/app/css/result.css
+++ b/app/css/result.css
@@ -102,8 +102,9 @@
   }
   #slider
   {
-    margin-top: 2vh;
     width: 60%;
+    margin: 0 auto;
+    margin-top: 2vh;
   }
 
   /* HIDE RADIO */
